--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
@@ -26,6 +25,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.16.1",
     "bcrypt": "^5.1.1",
+    "jsonwebtoken": "^9.0.2",
     "nest-winston": "^1.10.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
@@ -65,7 +65,7 @@
       "json",
       "ts"
     ],
-    "rootDir": "src",
+    "rootDir": "test",
     "testRegex": ".*\\.spec\\.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
